<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
     <groupId>com.nb</groupId>
      <artifactId>rrtb-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
  </parent>
    <artifactId>rrtb-infra</artifactId>
  <properties>
    <jdk.version>17</jdk.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>io.micronaut.starter</groupId>
      <artifactId>micronaut-starter-aws-cdk</artifactId>
      <version>4.6.3</version>
      <scope>compile</scope>
      <exclusions>
          <exclusion>
            <groupId>software.amazon.awscdk</groupId>
            <artifactId>aws-cdk-lib</artifactId>
          </exclusion>
        </exclusions>
    </dependency>
    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>aws-cdk-lib</artifactId>
      <version>2.166.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>io.micronaut.test</groupId>
          <artifactId>micronaut-test-junit5</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>localstack</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>testcontainers</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>junit-jupiter</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.assertj</groupId>
          <artifactId>assertj-core</artifactId>
          <scope>test</scope>
      </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration combine.self="override">
              <source>${jdk.version}</source>
              <target>${jdk.version}</target>
              <!--<annotationProcessorPaths combine.children="append">
                  <path>
                      <groupId>io.micronaut.serde</groupId>
                      <artifactId>micronaut-serde-processor</artifactId>
                      <version>${micronaut.serialization.version}</version>
                      <exclusions>
                          <exclusion>
                              <groupId>io.micronaut</groupId>
                              <artifactId>micronaut-inject</artifactId>
                          </exclusion>
                      </exclusions>
                  </path>
                  <path>
                      <groupId>io.micronaut.validation</groupId>
                      <artifactId>micronaut-validation-processor</artifactId>
                      <version>${micronaut.validation.version}</version>
                      <exclusions>
                          <exclusion>
                              <groupId>io.micronaut</groupId>
                              <artifactId>micronaut-inject</artifactId>
                          </exclusion>
                      </exclusions>
                  </path>
              </annotationProcessorPaths>
              <compilerArgs>
                  <arg>-Amicronaut.processing.group=com.nb</arg>
                  <arg>-Amicronaut.processing.module=rrtb</arg>
              </compilerArgs>-->
          </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration combine.self="override">
          <mainClass>com.nb.Main</mainClass>
         </configuration>
      </plugin>
    </plugins>
  </build>
</project>
